test/conformance/chainsaw/deleting-policies/cel-lib/image-data-lib/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example
  namespace: default
spec:
  containers:
    - name: nginx
      image: mirror.gcr.io/library/nginx:1.21
